--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -24,8 +24,9 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Margin="5">
-            <TextBlock Name="tb_loginLog"/>
-            <TextBlock Name="tb_loginPass"/>
+            <TextBox Name="tb_loginLog"/>
+            <TextBox Name="tb_loginPass" Margin="0 5 0 0"/>
+            <Button Name="bt_login" Content="Login" Margin="0 5 0 0" Click="bt_login_Click"/>
         </StackPanel>
         
         <ListView Grid.Column="1" Grid.RowSpan="2" Margin="5"/>
