--- a/WpfApp1/RegisterWin.xaml
+++ b/WpfApp1/RegisterWin.xaml
@@ -1,17 +1,16 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="WpfApp1.RegisterWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400">
+        Title="RegisterWin" Height="450" Width="300">
     <Grid>
         <StackPanel Margin="5 50 5 0">
-            <TextBox Name="tb_Name" Margin="0 10 0 0"/>
-            <TextBox Name="tb_Floor" Margin="0 10 0 0"/>
-            <Slider Name="sr_lvl" Margin="0 10 0 0" Value="0" Minimum="0" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="True"/>
-            <Button Name="bt_Save" Content="Save" Margin="0 15 0 0" Click="bt_Save_Click"/>
+            <TextBox Name="tb_loginLog"/>
+            <TextBox Name="tb_loginPass" Margin="0 5 0 0"/>
+            <Button Name="bt_login" Content="Login" Margin="0 5 0 0" Click="bt_login_Click"/>
         </StackPanel>
     </Grid>
 </Window>
