--- a/WpfApp1/SingInWin.xaml
+++ b/WpfApp1/SingInWin.xaml
@@ -1,17 +1,17 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="WpfApp1.SingInWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="400">
+        Title="SingInWin" Height="450" Width="300">
     <Grid>
         <StackPanel Margin="5 50 5 0">
-            <TextBox Name="tb_Name" Margin="0 10 0 0"/>
-            <TextBox Name="tb_Floor" Margin="0 10 0 0"/>
-            <Slider Name="sr_lvl" Margin="0 10 0 0" Value="0" Minimum="0" Maximum="100" TickFrequency="1" IsSnapToTickEnabled="True"/>
-            <Button Name="bt_Save" Content="Save" Margin="0 15 0 0" Click="bt_Save_Click"/>
+            <TextBox Name="tb_login" Margin="0 0 0 5"/>
+            <TextBox Name="tb_password" Margin="0 0 0 5"/>
+            <Button Name="bt_signIn" Content="Sign In" Click="bt_signIn_Click"/>
+            <Button Name="bt_register" Content="Register" Margin="0 10 0 0" Click="bt_register_Click"/>
         </StackPanel>
     </Grid>
 </Window>
